karlserve package Changelog
===========================

Unreleased
----------

- Fix bug where repoze.retry wasn't being configured properly to catch
  sqlalchemy TransactionRollbackError.

1.6 (2011-08-04)
----------------

- Added 'psycopg2.extensions.TransactionRollbackError' to set of retryable
  exceptions for the 'repoze.retry' middleware.  (LP #811046)

1.5 (2011-07-14)
----------------

- If docid disappears during reindex, skip it.

1.4 (2011-06-30)
----------------

- Added 'group.KarlCommunications' to selectable groups. (LP #798415)

- Reindex texts now always refers to the catalog, rather than the previous
  index, when deciding which documents still need to be indexed.

1.3 (2011-06-23)
----------------

- The 'reindex_text' script can now be used to reindex text even if the index
  type is not changing.

- Added default value for 'envelope_from_addr' config parameter.  (LP #785267)

1.2 (2011-06-15)
----------------

- Refactored the 'use_pgtextindex' script into the 'reindex_text' script which
  can convert between text index types in both directions.  (LP #771956)

- Does not use the pretty error page middleware in debug mode.  This allows
  the Paste interactive debugger to be used.

- Added --pdb option to drop into debugger when an exception is encountered.
  Does not work with the 'serve' command.

1.1 (2011-05-17)
----------------

- Removed zodb sync script.  This change will require rerunning buildout.

- Changed the 'hardwired' configuration into default configuration which can
  be overridden more easily.

- KarlServe writes some configuration files out as temporary files to the
  filesystem.  Previously /tmp was used for this.  This was a tactical error,
  since most OS's regularly clean out /tmp after a while, which was breaking
  Karl.  Now these files are stored in var/tmp of the running KarlServe
  environment.

- Added ability to define a 'root' instance which can be served at '/'.  This